--- a/source/_themes/customized_pyramid/theme.conf
+++ b/source/_themes/customized_pyramid/theme.conf
@@ -1,4 +1,4 @@
 [theme]
-inherit = basic
+inherit = customized_basic
 stylesheet = pyramid.css
 pygments_style = sphinx.pygments_styles.PyramidStyle
